--- a/config/locales/vachana_common_kn.yml
+++ b/config/locales/vachana_common_kn.yml
@@ -1,8 +1,8 @@
 
 kn:
-  vachana: "ವಚನ"
-  vachanakaara: "ವಚನಕಾರ"
-  no_vachana_found: "ಈ ಪದವು ಯಾವುದೇ ವಚನದಲ್ಲಿ ಕಂಡುಬಂದಿಲ್ಲ"
+  vachana: "ಪದ್ಯ"
+  vachanakaara: "ಕವಿ"
+  no_vachana_found: "ಈ ಪದವು ಯಾವುದೇ ಪದ್ಯದಲ್ಲಿ ಕಂಡುಬಂದಿಲ್ಲ"
   like: "ಇದರಂತೆ"
   exact: "ಇದನ್ನು"
   all: "ಎಲ್ಲಾ"
@@ -10,15 +10,15 @@ kn:
   total: "ಒಟ್ಟು"
   in_place: "ಕಡೆಗಳಲ್ಲಿ"
   and: "ಮತ್ತು"
-  found_word_in_vachanas: "ವಚನಗಳಲ್ಲಿ ಈ ಪದವು ಕಂಡುಬಂದಿದೆ"
-  vachanagalu: "ವಚನಗಳು"
+  found_word_in_vachanas: "ಪದ್ಯಗಳಲ್ಲಿ ಈ ಪದವು ಕಂಡುಬಂದಿದೆ"
+  vachanagalu: "ಪದ್ಯಗಳು"
   padaviruva: "ಪದವಿರುವ"
-  vachanakaararu: "ವಚನಕಾರರು"
+  vachanakaararu: "ಕವಿಗಳು"
   this: "ಈ"
   padavannu: "ಪದವನ್ನು"
   used: "ಬಳಸಿರುತ್ತಾರೆ"
-  in_vachana: "ವಚನಗಳಲ್ಲಿ"
-  this_word_used_in_vachanas: "ವಚನಗಳಲ್ಲಿ ಈ ಪದವನ್ನು ಬಳಸಿರುತ್ತಾರೆ"
+  in_vachana: "ಪದ್ಯಗಳಲ್ಲಿ"
+  this_word_used_in_vachanas: "ಪದ್ಯಗಳಲ್ಲಿ ಈ ಪದವನ್ನು ಬಳಸಿರುತ್ತಾರೆ"
   please_wait: "ದಯವಿಟ್ಟು ನಿರೀಕ್ಷಿಸಿ"
   previous: "ಹಿಂದೆ"
   next: "ಮುಂದೆ"
